--- a/src/components/MobileHeader/BurgerMenu/BurgerMenu.scss
+++ b/src/components/MobileHeader/BurgerMenu/BurgerMenu.scss
@@ -9,7 +9,7 @@ $block: '.#{variables.$ns}mobile-header-burger-menu';
 
     &__footer {
         display: flex;
-        border-top: 1px solid var(--yc-color-base-generic);
+        border-top: 1px solid var(--g-color-base-generic);
         margin-top: auto;
     }
 }
