--- a/src/components/MobileHeader/BurgerMenu/__stories__/BurgerMenuShowcase.scss
+++ b/src/components/MobileHeader/BurgerMenu/__stories__/BurgerMenuShowcase.scss
@@ -6,7 +6,7 @@
     width: 320px;
 
     &__item-accent {
-        color: var(--yc-color-text-misc);
+        color: var(--g-color-text-misc);
     }
 
     &__modal-item {
