--- a/src/components/MobileHeader/Logo/Logo.scss
+++ b/src/components/MobileHeader/Logo/Logo.scss
@@ -18,7 +18,7 @@ $block: '.#{variables.$ns}mobile-header-logo';
         &:focus {
             text-decoration: none;
             outline: none;
-            color: var(--yc-color-text-primary);
+            color: var(--g-color-text-primary);
         }
     }
 
