--- a/src/components/Settings/__stories__/SettingsDemo.scss
+++ b/src/components/Settings/__stories__/SettingsDemo.scss
@@ -4,7 +4,7 @@
     &__header {
         width: 100%;
         padding: 20px;
-        border-bottom: 1px solid var(--yc-color-line-generic);
+        border-bottom: 1px solid var(--g-color-line-generic);
     }
 
     &__checkbox + &__checkbox {
