--- a/src/components/ActionBar/ActionBar.scss
+++ b/src/components/ActionBar/ActionBar.scss
@@ -6,7 +6,7 @@ $block: '.#{variables.$ns}action-bar';
 #{$block} {
     box-sizing: border-box;
     height: bar.$height;
-    border-bottom: solid 1px var(--yc-color-line-generic);
+    border-bottom: solid 1px var(--g-color-line-generic);
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
