--- a/src/components/CompositeBar/__stories__/CompositeBarShowcase.scss
+++ b/src/components/CompositeBar/__stories__/CompositeBarShowcase.scss
@@ -7,7 +7,7 @@
     height: 200px;
 
     &__tag {
-        color: var(--yc-color-text-positive);
+        color: var(--g-color-text-positive);
         font-size: 12px;
         font-weight: 500;
         letter-spacing: 0.3px;
