--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -56,7 +56,7 @@ $block: '.#{variables.$ns}settings';
             }
 
             &-subheader {
-                color: var(--yc-color-text-secondary);
+                color: var(--g-color-text-secondary);
             }
 
             &-heading + #{$block}-subheader {
@@ -122,7 +122,7 @@ $block: '.#{variables.$ns}settings';
     }
 
     &__menu {
-        border-right: 1px solid var(--yc-color-line-generic);
+        border-right: 1px solid var(--g-color-line-generic);
     }
 
     &__heading {
@@ -180,7 +180,7 @@ $block: '.#{variables.$ns}settings';
                     width: 6px;
                     height: 6px;
                     border-radius: 50%;
-                    background-color: var(--yc-color-text-danger);
+                    background-color: var(--g-color-text-danger);
                     position: absolute;
                     right: -8px;
                     top: 1px;
@@ -193,12 +193,12 @@ $block: '.#{variables.$ns}settings';
             display: block;
             margin-top: 2px;
             padding-right: 20px;
-            color: var(--yc-color-text-secondary);
+            color: var(--g-color-text-secondary);
         }
     }
 
     &__found {
         @include text-accent;
-        background: var(--yc-color-base-selection);
+        background: var(--g-color-base-selection);
     }
 }
