--- a/src/components/Settings/SettingsMenuMobile/SettingsMenuMobile.scss
+++ b/src/components/Settings/SettingsMenuMobile/SettingsMenuMobile.scss
@@ -26,7 +26,7 @@ $block: '.#{variables.$ns}settings-menu-mobile';
                 width: 6px;
                 height: 6px;
                 border-radius: 50%;
-                background-color: var(--yc-color-text-danger);
+                background-color: var(--g-color-text-danger);
                 position: absolute;
                 right: -8px;
                 top: 11px;
