--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -3,7 +3,7 @@
 $block: '.#{variables.$ns}aside-header';
 
 .yc-root {
-    --aside-header-background-color: var(--yc-color-base-info);
+    --aside-header-background-color: var(--g-color-base-warning-light);
     --aside-header-collapse-button-divider-line-color: var(
         --aside-header-header-divider-line-color
     );
@@ -12,13 +12,13 @@ $block: '.#{variables.$ns}aside-header';
 .yc-root_theme_light,
 .yc-root_theme_light-hc {
     --aside-header-divider-line-color: transparent;
-    --aside-header-header-divider-line-color: var(--yc-color-line-generic);
+    --aside-header-header-divider-line-color: var(--g-color-line-generic);
 }
 
 .yc-root_theme_dark,
 .yc-root_theme_dark-hc {
-    --aside-header-divider-line-color: var(--yc-color-line-solid);
-    --aside-header-header-divider-line-color: var(--yc-color-line-solid);
+    --aside-header-divider-line-color: var(--g-color-line-generic-solid);
+    --aside-header-header-divider-line-color: var(--g-color-line-generic-solid);
 }
 
 #{$block} {
@@ -28,7 +28,7 @@ $block: '.#{variables.$ns}aside-header';
     height: 100%;
     width: 100%;
     position: relative;
-    background-color: var(--yc-color-base-background);
+    background-color: var(--g-color-base-background);
 
     &__aside {
         position: sticky;
@@ -38,7 +38,7 @@ $block: '.#{variables.$ns}aside-header';
         width: inherit;
         display: flex;
         flex-direction: column;
-        background-color: var(--yc-color-base-background);
+        background-color: var(--g-color-base-background);
         z-index: 100;
 
         box-sizing: border-box;
@@ -207,6 +207,14 @@ $block: '.#{variables.$ns}aside-header';
     &__collapse-button {
         --yc-button-background-color-hover: transparent;
 
+        // TODO: remove temporary fix for expand button
+        & > .yc-button__text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 20px;
+        }
+
         overflow: hidden;
         box-sizing: border-box;
         flex: none;
@@ -222,11 +230,11 @@ $block: '.#{variables.$ns}aside-header';
         }
 
         #{$class}__collapse-icon {
-            color: var(--yc-color-text-secondary);
+            color: var(--g-color-text-secondary);
         }
 
         &:hover #{$class}__collapse-icon {
-            color: var(--yc-color-text-primary);
+            color: var(--g-color-text-primary);
         }
     }
 }
