--- a/src/components/CompositeBar/HighlightedItem/HighlightedItem.scss
+++ b/src/components/CompositeBar/HighlightedItem/HighlightedItem.scss
@@ -11,8 +11,8 @@ $block: '.#{variables.$ns}composite-bar-highlighted-item';
     justify-content: center;
 
     &__icon {
-        width: 38px;
-        height: 38px;
+        width: var(--gn-aside-header-item-icon-background-size);
+        height: var(--gn-aside-header-item-icon-background-size);
         border-radius: 7px;
         cursor: pointer;
         background-color: var(--g-color-base-background);
