--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -3,27 +3,30 @@
 $block: '.#{variables.$ns}aside-header';
 
 .g-root {
-    --aside-header-background-color: var(--g-color-base-warning-light);
-    --aside-header-collapse-button-divider-line-color: var(
-        --aside-header-header-divider-line-color
+    --gn-aside-header-background-color: var(--g-color-base-warning-light);
+    --gn-aside-header-collapse-button-divider-line-color: var(
+        --gn-aside-header-subheader-divider-line-color
     );
+    --gn-aside-header-footer-item-icon-color: var(--g-color-text-primary);
+    --gn-aside-header-subheader-item-icon-color: var(--g-color-text-primary);
+    --gn-aside-header-item-icon-background-size: 38px;
 }
 
 .g-root_theme_light,
 .g-root_theme_light-hc {
-    --aside-header-divider-line-color: transparent;
-    --aside-header-header-divider-line-color: var(--g-color-line-generic);
+    --gn-aside-header-divider-line-color: transparent;
+    --gn-aside-header-subheader-divider-line-color: var(--g-color-line-generic);
 }
 
 .g-root_theme_dark,
 .g-root_theme_dark-hc {
-    --aside-header-divider-line-color: var(--g-color-line-generic-solid);
-    --aside-header-header-divider-line-color: var(--g-color-line-generic-solid);
+    --gn-aside-header-divider-line-color: var(--g-color-line-generic-solid);
+    --gn-aside-header-subheader-divider-line-color: var(--g-color-line-generic-solid);
 }
 
 #{$block} {
     $class: &;
-    --aside-header-min-width: 56px;
+    --gn-aside-header-min-width: 56px;
 
     height: 100%;
     width: 100%;
@@ -51,7 +54,7 @@ $block: '.#{variables.$ns}aside-header';
             width: 1px;
             height: 100%;
             content: '';
-            background-color: var(--aside-header-divider-line-color);
+            background-color: var(--gn-aside-header-divider-line-color);
         }
 
         &-popup-anchor {
@@ -93,7 +96,7 @@ $block: '.#{variables.$ns}aside-header';
         &-content_with-decoration {
             background: linear-gradient(
                 180deg,
-                var(--aside-header-background-color) calc(var(--gradient-height) * 0.33),
+                var(--gn-aside-header-background-color) calc(var(--gradient-height) * 0.33),
                 transparent calc(var(--gradient-height) * 0.88)
             );
         }
@@ -106,7 +109,7 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__header {
-        --aside-header-header-divider-height: 29px;
+        --gn-aside-header-header-divider-height: 29px;
 
         position: relative;
         z-index: 1;
@@ -122,7 +125,7 @@ $block: '.#{variables.$ns}aside-header';
             left: 0;
             z-index: -2;
             display: none;
-            color: var(--aside-header-background-color);
+            color: var(--gn-aside-header-background-color);
         }
 
         &_with-decoration::before {
@@ -132,9 +135,9 @@ $block: '.#{variables.$ns}aside-header';
             z-index: -2;
             display: none;
             width: 100%;
-            height: calc(100% - var(--aside-header-header-divider-height));
+            height: calc(100% - var(--gn-aside-header-header-divider-height));
             content: '';
-            background-color: var(--aside-header-background-color);
+            background-color: var(--gn-aside-header-background-color);
         }
 
         &::after {
@@ -145,7 +148,7 @@ $block: '.#{variables.$ns}aside-header';
             width: 100%;
             height: 1px;
             content: '';
-            background-color: var(--aside-header-header-divider-line-color);
+            background-color: var(--gn-aside-header-subheader-divider-line-color);
         }
     }
 
@@ -200,7 +203,7 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__content {
-        width: calc(100% - var(--aside-header-size));
+        width: calc(100% - var(--gn-aside-header-size));
         z-index: 95;
     }
 
@@ -220,7 +223,7 @@ $block: '.#{variables.$ns}aside-header';
         flex: none;
         width: 100%;
         height: 20px;
-        border-top: 1px solid var(--aside-header-collapse-button-divider-line-color);
+        border-top: 1px solid var(--gn-aside-header-collapse-button-divider-line-color);
         margin-top: auto;
 
         &:not(&_compact) {
