fix: fixed tags styles in AsideHeader stories

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -78,3 +78,10 @@ body {
         padding: 20px;
     }
 }
+
+.composite-bar-showcase__tag {
+    color: var(--g-color-text-positive);
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+}
