chore: add ref to AsideHeader story

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -27,8 +27,12 @@ body {
         }
     }
 
-    &__settings-ul {
+    &__settings {
         padding-right: 30px;
+    }
+
+    &__settings-ul {
+        margin: 0;
     }
 
     &__panel {
