--- a/src/components/Settings/__stories__/SettingsMobileDemo.scss
+++ b/src/components/Settings/__stories__/SettingsMobileDemo.scss
@@ -1,7 +1,13 @@
+@import '../../../../styles/mixins';
+
 .settings-mobile-demo {
     height: 100%;
 
     &__select {
         border-radius: 10px;
+    }
+
+    &__appearance-header {
+        @include text-body-2;
     }
 }
