fix(AsideHeader): change ref type

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -28,7 +28,9 @@ body {
     }
 
     &__settings {
-        padding-right: 30px;
+        width: 200px;
+        height: 100%;
+        padding: 20px;
     }
 
     &__settings-ul {
