--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -192,6 +192,10 @@ $block: '.#{variables.$ns}aside-header';
         flex-direction: row;
     }
 
+    &__pane-top {
+        border-bottom: 1px solid var(--gn-aside-header-collapse-button-divider-line-color);
+    }
+
     &_reverse #{$block}__pane-container {
         flex-direction: row-reverse;
     }
