feat: split AsideHeader to compound components

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -202,6 +202,10 @@ $block: '.#{variables.$ns}aside-header';
         flex-direction: row;
     }
 
+    &_reverse #{$block}__pane-container {
+        flex-direction: row-reverse;
+    }
+
     &__content {
         width: calc(100% - var(--gn-aside-header-size));
         z-index: 95;
