feat: add centered and closable props

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -193,7 +193,16 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__pane-top {
-        border-bottom: 1px solid var(--gn-aside-header-collapse-button-divider-line-color);
+        &_opened {
+            border-bottom: 1px solid var(--gn-aside-header-collapse-button-divider-line-color);
+        }
+    }
+
+    &__pane-top-alert {
+        &_centered {
+            display: flex;
+            justify-content: space-around;
+        }
     }
 
     &_reverse #{$block}__pane-container {
