--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -13,7 +13,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     cursor: pointer;
 
     &__icon {
-        color: var(--g-color-text-misc);
+        color: var(--gn-aside-header-menu-item-icon-color);
 
         .#{variables.$ns}footer-item &,
         .#{variables.$ns}composite-bar-highlighted-item & {
