feat(Item): added popupContentClassName prop

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -89,6 +89,9 @@ body {
 
         opacity: 70%;
     }
+    &__popup-content-class-name {
+        border-radius: 16px;
+    }
 }
 
 .composite-bar-showcase__tag {
